--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="pt" dir="ltr">
 <head>
     <meta charset='utf-8'>
-    <title>Vou de bike...</title>
+    <title>..</title>
     <link rel="stylesheet" href="style.css">
   
 </head>
  <body>
-    <h1>TÍTULO _________________________</h1>
+    <h1>Judô </h1>
    
   <!---
 O tÍTULO h1 É O TÍTULO PRINCIPAL DO SEU SITE 
