--- a/index1.html
+++ b/index1.html
@@ -10,10 +10,10 @@
     <h1>judo</h1>
    
   <!---
-O tÍTULO h1 É O TÍTULO PRINCIPAL DO SEU SITE 
+ 
 --->
    
-    <img id = "NOMEIMAGEM"  src="NOMEIARQUIVO.jpg">
+    <img id = "judo"  src="judo.jpeg">
    
    <!---
 Para colocar uma imagem;
@@ -24,7 +24,7 @@ Para colocar uma imagem;
    
     <h2>VALORES DO JUDO</h2>
     
-    <p>PRIMEIRO PARÁAGRAFO</p>
+    <p></p>
 
     <p>Os valres do judo sao o respito,honestidade,autocontrole,amizade,
    </p>cortesia,honra,coragem e modestia os oito valores do codigo moral
