--- a/kumikata.html
+++ b/kumikata.html
@@ -2,12 +2,12 @@
 <html lang="pt" dir="ltr">
 <head>
     <meta charset='utf-8'>
-    <title>Judo</title>
+    <title></title>
     <link rel="stylesheet" href="style.css">
   
 </head>
  <body>
-    <h1>judo</h1>
+    <h1></h1>
    
   <!---
  
@@ -22,20 +22,15 @@ Para colocar uma imagem;
 - usar src para busca da imagem -> src="NOMEDOARQUIVO.JPG"
 --->
    
-    <h2>VALORES DO JUDO</h2>
+    <h2></h2>
     
     <p></p>
-
-    <p>Os valres do judo sao o respito,honestidade,autocontrole,amizade,
-   </p>cortesia,honra,coragem e modestia os oito valores do codigo moral
-   do judo sao ensinados a todos os judocas desde da primeira vez que entra no dojo
-   (academia).
+    <p>
+   </p>
  
 
-     <p>O PRINCIPAL ENSINAMENTO DO JUDÔ
-   </p>Ainda que seja um esporte individual e altamente competitivo,o judo esina o respeito mutuo,seja as pessoas 
-   que compoem a sociedade na qual o atleta vive.
-    
+     <p>
+   </p>
  </body>
 </html>
 Footer
