--- a/kumikata.html
+++ b/kumikata.html
@@ -2,26 +2,36 @@
 <html lang="pt" dir="ltr">
 <head>
     <meta charset='utf-8'>
-    <title></title>
+    <title>Kumi kata</title>
     <link rel="stylesheet" href="style.css">
   
 </head>
  <body>
-    <h1></h1>
+    <h1>Kumi kata</h1>
+    <p> </p>
+    <p> </p>
    
-  <!---
- 
---->
-   
-    <img id = "judo"  src="judo.jpeg">
-   
-   <!---
-Para colocar uma imagem;
--  precisa adicionar ela como arquivo no github,
-- criar um identificador para ela id="nomedaimagem"
-- usar src para busca da imagem -> src="NOMEDOARQUIVO.JPG"
---->
-   
+    <img id = "kumi kata"  src="kumikkata.gif">
+    <p>A importancia do kumi kata para fazer o sseguintes golpes:</p>
+    <p>golpes</p>
+<ul>
+  <li>Osoto Gari</li>
+  <li>Ouchi Gari</li>
+  <li>Harai Goshi</li>
+  <li>Uchi Mata</li>
+  <li>Morote Seoi Nage</li>
+  <li>Ippon Seoi Nage</li>
+  <li>Tai Otoshi</li>
+  <li>Sode tsurikomi Goshi</li>
+  <li>Tani Otoshi</li>
+  <li>Yoko tomoe Nagi</li>
+  <li>Sumi Gaeshi</li>
+  <li>Ushiro Goshi</li>
+  <li>Sankaku Jime</li>
+  <li>Koshi Guruma</li>
+  <li>Osoto guruma</li>
+  <li>Ko Ouchi Gari</li>
+  <li>De Ashi Barai</li>
     <h2></h2>
     
     <p></p>
